All project files

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-# This file lists all individuals having contributed content to the repository.
+# Authors 
+This file hold the names of the collaborators 
 
-David Agor <agordavidt@gmail.com>
-Wilma Tar <wilmadoofan.tar@gmail.com>
+Olawunmi Eniola
+Queen Unogwu
