--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
-# Authors 
-This file hold the names of the collaborators 
+# Authors
+The authors of this project are listed in this file
 
-Olawunmi Eniola
-Queen Unogwu
+Agor David
+Odigbo Paul
